--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* –– CSS Variables –– */
+/* CSS Variables */
 :root {
     --color-background: #E3E3E3;
     --color-background-secondary: #D2D2D2;
@@ -20,7 +20,7 @@
     --remove-button-dark: #8F1F00;
 }
 
-/* –– Base Styles –– */
+/* Base Styles */
 html {
     scrollbar-gutter: stable;
 }
@@ -37,46 +37,52 @@ body {
     font-family: Arial, sans-serif;
     font-size: 12px;
     background-color: var(--color-background);
+
+    /* For footer */
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
 }
 
 body *::selection {
     color: var(--color-white);
-    background: var(--color-accent);
+    background: var(--color-primary);
 }
 
 body *::-moz-selection {
     color: var(--color-white);
-    background: var(--color-accent);
+    background: var(--color-primary);
 }
 
-/* –– Footer –– */
+/* Footer */
 footer {
-    padding: 24px 0px 12px 0px;
+    margin-top: auto;
+    padding: 24px 0px 0px 0px;
     color: var(--color-secondary);
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
     bottom: 0;
-  }
+}
 
-  .footer-left {
+.footer-left {
     font-weight: 500;
-  }
+}
 
-  @media (max-width: 600px) {
+@media (max-width: 600px) {
     footer {
-      flex-direction: column;
-      gap: 0.5rem;
-      text-align: center;
+        flex-direction: column;
+        gap: 0.5rem;
+        text-align: center;
     }
 
     .footer-right a {
-      margin: 0 0.5rem;
+        margin: 0 0.5rem;
     }
-  }
+}
 
-/* –– Typography –– */
+/* Typography */
 h1 {
     padding: 5px 0px;
     font-size: 12px;
@@ -87,6 +93,14 @@ p {
     padding: 5px 0px;
 }
 
+blockquote {
+    font-style: italic;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 15px;
+    border-left: 3px solid var(--color-secondary);
+}
+
 .primary-text {
     color: var(--color-primary);
 }
@@ -95,7 +109,7 @@ p {
     color: var(--color-secondary);
 }
 
-/* –– Links –– */
+/* Links */
 .home-link,
 .home-link:hover,
 .home-link:visited {
@@ -125,7 +139,19 @@ p {
     text-decoration: underline;
 }
 
-/* –– Details/Summary –– */
+.table-link {
+    color: var(--color-accent);
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.table-link:hover {
+    color: var(--color-accent);
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+/* Details/Summary */
 details {
     padding-bottom: 24px;
 }
@@ -138,7 +164,11 @@ details summary::-webkit-details-marker {
     display: none;
 }
 
-/* –– Layout –– */
+#properties-content {
+    margin-top: 15px;
+}
+
+/* Layout */
 .container {
     display: grid;
     grid-template-columns: 160px 1fr;
@@ -150,7 +180,7 @@ details summary::-webkit-details-marker {
 }
 
 .proj-resource-container {
-    max-width: 1000px;
+    max-width: 100%;
 }
 
 .left,
@@ -175,7 +205,7 @@ details summary::-webkit-details-marker {
     }
 }
 
-/* –– Form Elements –– */
+/* Form Elements */
 .db-view {
     padding-right: 12px;
 }
@@ -297,6 +327,18 @@ select {
     height: 24px;
 }
 
+select>.logic-operator::after {
+    content: "";
+    display: block;
+    width: 7px;
+    height: 4px;
+    -webkit-mask-image: url(assets/arrow-down.svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-image: url(assets/arrow-down.svg);
+    mask-repeat: no-repeat;
+    background: #000;
+}
+
 input[type="search"] {
     padding: 10px;
     width: 200px;
@@ -309,12 +351,12 @@ input[type="text"] {
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 input[type=number] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 select {
@@ -373,7 +415,62 @@ input[type=reset]:focus,
     outline: 1px dotted var(--remove-button-dark);
 }
 
-/* –– Controls Section –– */
+.dropdown {
+    display: inline-grid;
+    grid-template-areas: "select";
+    align-items: center;
+    position: relative;
+}
+
+.dropdown>select,
+.dropdown>.dropdown-button {
+    grid-area: select;
+}
+
+.dropdown>select {
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: var(--input-bg);
+    color: var(--input-fg);
+    border-radius: 0;
+    border: 1px solid var(--dark);
+    border-bottom: 1px solid var(--lightest);
+    border-right: 1px solid var(--lightest);
+    box-shadow: inset 1px 1px 0 var(--darkest), inset -1px -1px 0 var(--light);
+    padding: 4px 30px 4px 8px;
+    font-family: inherit;
+    font-size: inherit;
+    outline: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+.dropdown>.dropdown-button {
+    justify-self: end;
+    pointer-events: none;
+    width: 21px;
+    height: 20px;
+    margin-right: 2px;
+    background-color: var(--color-background-secondary);
+    border: 1px solid var(--darkest);
+    border-top: 1px solid var(--lightest);
+    border-left: 1px solid var(--lightest);
+    box-shadow: inset -1px -1px 0 var(--dark);
+}
+
+.dropdown>.dropdown-button::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    mask-image: url(assets/arrow-down.svg);
+    mask-size: 8px 8px;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    background-color: var(--color-primary);
+}
+
+/* Controls Section */
 .controls {
     border-top: dashed 1px var(--color-primary);
 }
@@ -415,7 +512,7 @@ input[type=reset]:focus,
     padding: 5px;
 }
 
-/* –– Table Styles –– */
+/* Table Styles */
 .table-container {
     overflow-x: auto;
     max-width: 100%;
@@ -445,7 +542,7 @@ th {
 }
 
 .sort-arrow {
-    color: var(--color-accent);
+    color: var(--color-primary);
     position: absolute;
     right: 5px;
     top: 50%;
@@ -470,7 +567,7 @@ tr:nth-child(even) {
     border-left: 1px solid var(--color-primary);
 }
 
-/* –– Image Popup Styles –– */
+/* Image Popup Styles */
 .image-overlay {
     position: fixed;
     top: 0;
@@ -491,7 +588,7 @@ tr:nth-child(even) {
     max-height: 90%;
     z-index: 1001;
     cursor: pointer;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
     /* border: 3px solid var(--color-white); */
 }
 
@@ -499,7 +596,49 @@ tr:nth-child(even) {
     display: none !important;
 }
 
-/* –– Mobile Responsiveness Adjustments –– */
+/* Images and content */
+.thumbnail-img {
+    padding: 2.5px;
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    display: block;
+}
+
+th.thumbnail-col {
+    width: 35px;
+    max-width: 35px;
+}
+
+td.thumbnail-col {
+    padding: 0 !important;
+    width: 35px;
+    max-width: 35px;
+    text-align: center;
+}
+
+.responsive-iframe-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+}
+
+.responsive-iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+#imageDisplayArea {
+    margin-top: 15px;
+    text-align: center;
+}
+
+/* Mobile Responsiveness Adjustments */
 @media (max-width: 750px) {
 
     .controls .controls-row {
@@ -537,16 +676,15 @@ tr:nth-child(even) {
         /* margin-top: 5px; */
     }
 
-     /* Make sure remove button stays aligned */
-     .query-builder .query-condition .query-remove {
+    .query-builder .query-condition .query-remove {
         margin-left: auto;
-     }
+    }
 
 
     .columns-grid {
         grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
         max-width: 100%;
-         gap: 10px;
+        gap: 10px;
     }
 
     .column-group label {
@@ -556,82 +694,37 @@ tr:nth-child(even) {
         text-align: left;
     }
 
-     .column-group label input[type="checkbox"] {
+    .column-group label input[type="checkbox"] {
         margin-right: 5px;
-         flex-shrink: 0;
-     }
+        flex-shrink: 0;
+    }
 
-     .column-group label span {
-         display: inline-block;
-         line-height: 1.2;
-     }
+    .column-group label span {
+        display: inline-block;
+        line-height: 1.2;
+    }
 
-     .table-container {
+    .table-container {
         overflow-x: auto;
-     }
+    }
 
-      table th, table td {
+    table th,
+    table td {
         padding: 8px 15px 8px 8px !important;
         min-width: 80px;
-      }
+    }
 }
 
 @media (max-width: 480px) {
-     .columns-grid {
+    .columns-grid {
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-     }
+    }
 
-     .controls .controls-row {
+    .controls .controls-row {
         gap: 5px;
-     }
+    }
 
-     .query-builder .query-condition {
-         gap: 5px;
-     }
-}
-
-
-
-
-
-
-
-.thumbnail-img {
-    padding: 2.5px;
-    width: 30px;
-    height: 30px;
-    object-fit: cover;
-    display: block;
-}
-
-th.thumbnail-col {
-    width: 35px;
-    max-width: 35px;
-}
-
-td.thumbnail-col {
-    padding: 0 !important;
-    width: 35px;
-    max-width: 35px;
-    text-align: center;
-}
-
-
-
-
-
-.responsive-iframe-container {
-    position: relative; 
-    overflow: hidden; 
-    width: 100%; 
-    padding-top: 56.25%;
-}
-
-.responsive-iframe-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%; 
-    height: 100%;
-    border: 0;
+    .query-builder .query-condition {
+        gap: 5px;
+    }
 }
