--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ select>.logic-operator::after {
     -webkit-mask-repeat: no-repeat;
     mask-image: url(assets/arrow-down.svg);
     mask-repeat: no-repeat;
-    background: #000;
+    background: var(--color-primary);
 }
 
 input[type="search"] {
@@ -435,12 +435,12 @@ input[type=reset]:focus,
     font-size: 14px;
     width: 24px;
     height: 24px;
-    color: #FFF;
+    color: var(--lightest);
     padding: 0;
     margin: 0;
     text-align: center;
     background-color: var(--remove-button-bg);
-    border: 1px solid #000;
+    border: 1px solid var(--color-primary);
     border-top: 1px solid var(--remove-button-light);
     border-left: 1px solid var(--remove-button-light);
     box-shadow: inset -1px -1px 0 var(--remove-button-medium);
@@ -585,6 +585,12 @@ th {
     transform: translateY(-50%);
 }
 
+.image-loader-table {
+    border-left: 1px solid var(--color-primary);
+    border-right: 1px solid var(--color-primary);
+    border-bottom: 1px solid var(--color-primary);
+}
+
 thead {
     border-top: 1px dashed var(--color-primary);
     border-bottom: 1px solid var(--color-primary);
@@ -600,32 +606,8 @@ tr:nth-child(even) {
 }
 
 #database {
-    border-left: 1px solid var(--color-primary);
+    border: 1px solid var(--color-primary);
 }
-
-/* Image Popup Styles */
-/* .image-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.75);
-    z-index: 1000;
-    cursor: pointer;
-}
-
-.popup-image {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 90%;
-    max-height: 90%;
-    z-index: 1001;
-    cursor: pointer;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-} */
 
 .hidden {
     display: none !important;
